2013-02-26  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* tests/test-getexp.c: Fix constant.

2013-02-26  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* tests/test-decode.c: Indent correction.

2013-02-26  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* Makefile.in (libdfp_c_tests): Rename test-round to test-fenv.
	* tests/test-round.c: Move from ...
	* tests/test-fenv.c: ... to here.

2013-02-26  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* Makefile.in (libdfp_c_tests): Remove test-GCC-PR52140, test-negate,
	test-param, and test-stdlib.
	* tests/test-GCC-PR52140.c: Remove.
	* tests/test-negate.c: Remove.
	* tests/test-param.c: Remove.
	* tests/test-stdlib.c: Remove.

2013-02-26  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* Makefile.in (libdfp_c_tests): Add quantize new tests.
	* tests/quantize.input: New file: quantize new tests input.
	* tests/test-quantize.c: Remove.

2013-02-26  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* Makefile.in (libdfp_c_tests): Add fpclassify new tests.
	* tests/fpclassify.input: New file: fpclassify new tests input.
	* tests/test-fpclassify.c: Remove.

2013-02-26  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* Makefile.in (libdfp_c_tests): Add ceil, floor, nearbyint, round,
	roundeven, and trunc tests.
	* tests/ceil.input: New file: ceil new test input.
	* tests/floor.input: New file: floor new test input.
	* tests/nearbyint.input: New file: nearbyint new test input.
	* tests/round.input: New file: round new test input.
	* tests/roundeven.input: New file: roundeven new test input.
	* tests/trunc.input: New file: trunc new test input.
	* tests/test-rounding.c: Remove.

2013-02-26  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* Makefile.in (libdfp_c_tests): Add quantum new tests.
	* tests/quantum.input: New file: quantum new tests input.
	* tests/test-quantum.c: Remove.

2013-02-26  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>
